Almost finished still trying to get 16 to work

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: left;
 }
-#rectangle{
+.div{
     width:100px;
     height:20px;
     background:gray;
